第一次提交

--- a/public/index.html
+++ b/public/index.html
@@ -15,3 +15,20 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+<style>
+    *{
+        margin: 0;
+        padding: 0;
+    }
+    html,body,#app,.el-container{
+        /*设置内部填充为0，几个布局元素之间没有间距*/
+        padding: 0px;
+        /*外部间距也是如此设置*/
+        margin: 0px;
+        /*统一设置高度为100%*/
+        height: 100%;
+    }
+    .el-main{
+        padding: 0;
+    }
+</style>
