基本完成了首页的制作

--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,7 @@
         padding: 0px;
         /*外部间距也是如此设置*/
         margin: 0px;
-        /*统一设置高度为100%*/
-        height: 100%;
+        overflow-x: hidden;
     }
     .el-main{
         padding: 0;
