增加了一个logo

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
         padding: 0px;
         /*外部间距也是如此设置*/
         margin: 0px;
-        overflow-x: hidden;
+        /*overflow-x: hidden;*/
     }
     .el-main{
         padding: 0;
