--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>HUAMUZHU二手交易平台</title>
       <script src="/static/anime.min.js"></script>
       <script src="/static/main.js"></script>
   </head>
@@ -33,4 +33,16 @@
     .el-main{
         padding: 0;
     }
+    ::-webkit-scrollbar{
+        background-color: #eee;
+        width: 6px;
+        height: 6px;
+        border-radius: 6px;
+    }
+    ::-webkit-scrollbar-thumb{
+        background-color: #4e6ef2;
+        border-radius: 6px;
+    }
+
+
 </style>
